# fire

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  ios-release-artifacts.yml  ios-testflight.yml  ios16-trollstore-ipa.yml
docs/: backend-api.md
docs/architecture/: 2026-06-05-rich-text-and-state-observer-design.md  2026-06-17-unified-onboarding-launch-design.md  fire-native-architecture.md  fire-native-workspace.md  ios-apm-beta-foundation.md  ios-auth-alignment-plan.md  ios-auth-cookie-invalidation-fix.md  ios-auth-cookie-rotation-recovery-plan.md  ios-auth-read-path-resync.md  ios-listkit-home.md  ios-testflight-release.md  ios-topic-detail-loading-and-notification-routing.md  login-cf-cookie-v0218-migration-plan.md
docs/architecture/plans/: android-native-alignment-plan.md  ios-cloudflare-browser-alignment-plan.md  ios-topic-detail-feed-rewrite-iglistkit-texture-nuke-rust-cache-plan.md  ios-topic-detail-native-reply-cell-plan.md
docs/backend-api/: 01-access-and-conventions.md  03-bootstrap-and-site.md  04-topics-and-posts.md  05-users-search-and-notifications.md  06-creation-and-interaction.md  07-messagebus.md  08-mobile-integration.md
docs/knowledge/: api-overview.md  discourse-cloudflare-challenge-guide.md  discourse-cookie-session-state-guide.md  discourse-startup-implementation-spec.md  discourse-webview-login-guide.md
docs/knowledge/api/: 01-global-conventions.md  02-auth-and-session.md  03-topics.md  04-posts.md  05-users.md  06-search.md  07-notifications.md  08-file-upload.md  09-polls.md  10-presence-and-categories.md  11-extended-features.md  12-messagebus.md  13-ldc-cdk-oauth.md  14-misc-apis.md
docs/release/: README.md  accessibility-audit-checklist.md  app-store-data-collection.md  app-store-description.md  internal-testing-evidence.md  performance-benchmarks.md  play-store-data-safety.md  play-store-description.md  play-store-testing-setup.md  privacy-policy.md  privacy-review-evidence.md  release-gate-evidence.md  test-feedback-template.md  testflight-setup.md  third-party-licenses.md
docs/superpowers/plans/: 2026-04-26-ios-track-b-tab-startup-preload.md  2026-06-04-discourse-startup-alignment.md  2026-06-06-auth-cf-runtime-alignment.md  2026-06-07-topic-detail-main-thread-and-ui-split-plan.md  2026-06-08-p1-foundation.md  2026-06-08-p2-feature-completion.md  2026-06-08-p3-native-differentiation.md  2026-06-08-p4-release-preparation.md  2026-06-13-ios16-uikit-root-contract.md  2026-06-16-native-login-page-redesign.md  2026-06-16-topic-push-and-tab-scroll-to-top.md
docs/superpowers/specs/: 2026-06-08-fire-v2-roadmap-design.md  2026-06-16-native-login-page-redesign-design.md  ios-quality-and-polish-design.md
native/android-app/: .gitignore  README.md  build.gradle.kts
native/android-app/marketing/: README.md
native/android-app/src/main/: AndroidManifest.xml
native/ios-app/: Fire.entitlements  FireWidget.entitlements  README.md  project.yml
native/ios-app/App/: FireAppViewModel.swift  FireComponents.swift  FireProfileView.swift  FireRichTextRenderer.swift  FireTabRoot.swift  FireTopicDetailView.swift  FireTopicPresentation.swift
native/ios-app/App/Core/: FireComponents.swift  FireContextMenus.swift  FireMainTabBarController.swift  FireRootCoordinator.swift  FireShimmerModifier.swift  FireTheme.swift  SessionState+Helpers.swift
native/ios-app/Configs/: Fire-Shared.xcconfig  FireWidget-Info.plist  PrivacyInfo.xcprivacy
native/ios-app/Fire.xcodeproj/: project.pbxproj
native/ios-app/marketing/: README.md
native/ios-app/scripts/: build_texture_xcframework.sh
rust/: README.md
rust/crates/fire-core/: Cargo.toml
rust/crates/fire-core/src/: cookies.rs  error.rs  ldc_payloads.rs  lib.rs  logging.rs  notification_payloads.rs  session_store.rs  topic_payloads.rs
rust/crates/fire-core/src/core/: cdk.rs  cf_challenge.rs  cookie_healing.rs  ldc.rs  mod.rs  network.rs  notifications.rs  persistence.rs  session.rs  topic_feed.rs  topics.rs
rust/crates/fire-core/tests/: login_finalization.rs  network.rs  notifications.rs  session_flow.rs  startup_alignment.rs
rust/crates/fire-models/: Cargo.toml
rust/crates/fire-models/src/: cookie.rs  (+7 more)
rust/crates/fire-store/: Cargo.toml
rust/crates/fire-store/src/: lib.rs  migrations.rs
rust/crates/fire-store/src/topic_detail/: mod.rs
rust/crates/fire-uniffi/: Cargo.toml
rust/crates/fire-uniffi-ldc/: Cargo.toml
rust/crates/fire-uniffi-ldc/src/: lib.rs  records.rs
rust/crates/fire-uniffi/src/: lib.rs
scripts/: benchmark-cold-start.sh  benchmark-memory-peak.sh  benchmark-scroll-fps.sh  benchmark-topic-load.sh  check_clean_submodules.sh  collect-licenses.sh  test-release-verifiers.sh  verify-accessibility-audit.sh  verify-internal-testing-evidence.sh  verify-marketing-assets.sh  verify-p4-release-evidence-suite.sh  verify-performance-benchmarks.sh  verify-privacy-review-evidence.sh  verify-release-gates.sh  verify-release-readiness.sh  verify-roadmap-architecture-constraints.sh  verify-roadmap-implementation-evidence.sh  verify-roadmap-p4-acceptance.sh  verify-roadmap-plan-contract.sh
scripts/ios/: archive_release.sh  verify_xcode26_toolchain.sh
(+325 files in other folders)
