[package]
name = "fire-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
fire-models = { path = "../fire-models" }
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
mars-xlog.workspace = true
mars-xlog-core.workspace = true
openwire.workspace = true
regex.workspace = true
ego-tree.workspace = true
html5ever.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
rustls.workspace = true
webpki-roots.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
openwire = { workspace = true, features = ["platform-verifier"] }
