[package]
name = "fire-uniffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
fire-core = { path = "../fire-core" }
fire-models = { path = "../fire-models" }
fire-rich-text = { path = "../fire-rich-text" }
fire-uniffi-diagnostics = { path = "../fire-uniffi-diagnostics" }
fire-uniffi-ldc = { path = "../fire-uniffi-ldc" }
fire-uniffi-messagebus = { path = "../fire-uniffi-messagebus" }
fire-uniffi-notifications = { path = "../fire-uniffi-notifications" }
fire-uniffi-search = { path = "../fire-uniffi-search" }
fire-uniffi-session = { path = "../fire-uniffi-session" }
fire-uniffi-topics = { path = "../fire-uniffi-topics" }
fire-uniffi-types = { path = "../fire-uniffi-types" }
fire-uniffi-user = { path = "../fire-uniffi-user" }
futures-util.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uniffi = { workspace = true, features = ["cli"] }
